--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -1,3 +1,5 @@
+/* Split a string by delimiter
+  Example: split('1--2--3', '--') -> "1" "2" "3" */
 /* Return the prefix of the css vars if configured */
 /* Returns the css custom property */
 /* A wrapper for var() that prefixes the custom property
@@ -191,53 +193,161 @@ a {
 }
 html {
   /*! purgecss start ignore */
-  --c-surface-1: #fafafa;
-  --c-surface-2: #ffffff;
-  --c-surface-3: #f5f5f5;
-  --c-surface-4: #e6e6e6;
-  --c-text-1: #171717;
-  --c-text-2: #262626;
-  --c-text-3: #404040;
-  --c-text-4: #525252;
-  --c-code-bg: #171717;
-  --c-code-text: #f5f5f5;
-  --c-quote-text: #262626;
-  --c-quote-border: #089b80;
+  --c-surface-1-h: 0deg;
+  --c-surface-1-s: 0%;
+  --c-surface-1-l: 98.0392156863%;
+  --c-surface-1: hsl(var(--c-surface-1-h), var(--c-surface-1-s), var(--c-surface-1-l));
+  --c-surface-2-h: 0deg;
+  --c-surface-2-s: 0%;
+  --c-surface-2-l: 100%;
+  --c-surface-2: hsl(var(--c-surface-2-h), var(--c-surface-2-s), var(--c-surface-2-l));
+  --c-surface-3-h: 0deg;
+  --c-surface-3-s: 0%;
+  --c-surface-3-l: 96.0784313725%;
+  --c-surface-3: hsl(var(--c-surface-3-h), var(--c-surface-3-s), var(--c-surface-3-l));
+  --c-surface-4-h: 0deg;
+  --c-surface-4-s: 0%;
+  --c-surface-4-l: 90.1960784314%;
+  --c-surface-4: hsl(var(--c-surface-4-h), var(--c-surface-4-s), var(--c-surface-4-l));
+  --c-text-1-h: 0deg;
+  --c-text-1-s: 0%;
+  --c-text-1-l: 9.0196078431%;
+  --c-text-1: hsl(var(--c-text-1-h), var(--c-text-1-s), var(--c-text-1-l));
+  --c-text-2-h: 0deg;
+  --c-text-2-s: 0%;
+  --c-text-2-l: 14.9019607843%;
+  --c-text-2: hsl(var(--c-text-2-h), var(--c-text-2-s), var(--c-text-2-l));
+  --c-text-3-h: 0deg;
+  --c-text-3-s: 0%;
+  --c-text-3-l: 25.0980392157%;
+  --c-text-3: hsl(var(--c-text-3-h), var(--c-text-3-s), var(--c-text-3-l));
+  --c-text-4-h: 0deg;
+  --c-text-4-s: 0%;
+  --c-text-4-l: 32.1568627451%;
+  --c-text-4: hsl(var(--c-text-4-h), var(--c-text-4-s), var(--c-text-4-l));
+  --c-code-bg-h: 0deg;
+  --c-code-bg-s: 0%;
+  --c-code-bg-l: 9.0196078431%;
+  --c-code-bg: hsl(var(--c-code-bg-h), var(--c-code-bg-s), var(--c-code-bg-l));
+  --c-code-text-h: 0deg;
+  --c-code-text-s: 0%;
+  --c-code-text-l: 96.0784313725%;
+  --c-code-text: hsl(var(--c-code-text-h), var(--c-code-text-s), var(--c-code-text-l));
+  --c-quote-text-h: 0deg;
+  --c-quote-text-s: 0%;
+  --c-quote-text-l: 14.9019607843%;
+  --c-quote-text: hsl(var(--c-quote-text-h), var(--c-quote-text-s), var(--c-quote-text-l));
+  --c-quote-border-h: 168.9795918367deg;
+  --c-quote-border-s: 90.1840490798%;
+  --c-quote-border-l: 31.9607843137%;
+  --c-quote-border: hsl(var(--c-quote-border-h), var(--c-quote-border-s), var(--c-quote-border-l));
   /*! purgecss end ignore */
 }
 
 html {
   /*! purgecss start ignore */
-  --c-surface-light-1: #fafafa;
-  --c-surface-light-2: #ffffff;
-  --c-surface-light-3: #f5f5f5;
-  --c-surface-light-4: #e6e6e6;
-  --c-text-light-1: #171717;
-  --c-text-light-2: #262626;
-  --c-text-light-3: #404040;
-  --c-text-light-4: #525252;
-  --c-code-bg-light: #171717;
-  --c-code-text-light: #f5f5f5;
-  --c-quote-text-light: #262626;
-  --c-quote-border-light: #089b80;
+  --c-surface-light-1-h: 0deg;
+  --c-surface-light-1-s: 0%;
+  --c-surface-light-1-l: 98.0392156863%;
+  --c-surface-light-1: hsl(var(--c-surface-light-1-h), var(--c-surface-light-1-s), var(--c-surface-light-1-l));
+  --c-surface-light-2-h: 0deg;
+  --c-surface-light-2-s: 0%;
+  --c-surface-light-2-l: 100%;
+  --c-surface-light-2: hsl(var(--c-surface-light-2-h), var(--c-surface-light-2-s), var(--c-surface-light-2-l));
+  --c-surface-light-3-h: 0deg;
+  --c-surface-light-3-s: 0%;
+  --c-surface-light-3-l: 96.0784313725%;
+  --c-surface-light-3: hsl(var(--c-surface-light-3-h), var(--c-surface-light-3-s), var(--c-surface-light-3-l));
+  --c-surface-light-4-h: 0deg;
+  --c-surface-light-4-s: 0%;
+  --c-surface-light-4-l: 90.1960784314%;
+  --c-surface-light-4: hsl(var(--c-surface-light-4-h), var(--c-surface-light-4-s), var(--c-surface-light-4-l));
+  --c-text-light-1-h: 0deg;
+  --c-text-light-1-s: 0%;
+  --c-text-light-1-l: 9.0196078431%;
+  --c-text-light-1: hsl(var(--c-text-light-1-h), var(--c-text-light-1-s), var(--c-text-light-1-l));
+  --c-text-light-2-h: 0deg;
+  --c-text-light-2-s: 0%;
+  --c-text-light-2-l: 14.9019607843%;
+  --c-text-light-2: hsl(var(--c-text-light-2-h), var(--c-text-light-2-s), var(--c-text-light-2-l));
+  --c-text-light-3-h: 0deg;
+  --c-text-light-3-s: 0%;
+  --c-text-light-3-l: 25.0980392157%;
+  --c-text-light-3: hsl(var(--c-text-light-3-h), var(--c-text-light-3-s), var(--c-text-light-3-l));
+  --c-text-light-4-h: 0deg;
+  --c-text-light-4-s: 0%;
+  --c-text-light-4-l: 32.1568627451%;
+  --c-text-light-4: hsl(var(--c-text-light-4-h), var(--c-text-light-4-s), var(--c-text-light-4-l));
+  --c-code-bg-light-h: 0deg;
+  --c-code-bg-light-s: 0%;
+  --c-code-bg-light-l: 9.0196078431%;
+  --c-code-bg-light: hsl(var(--c-code-bg-light-h), var(--c-code-bg-light-s), var(--c-code-bg-light-l));
+  --c-code-text-light-h: 0deg;
+  --c-code-text-light-s: 0%;
+  --c-code-text-light-l: 96.0784313725%;
+  --c-code-text-light: hsl(var(--c-code-text-light-h), var(--c-code-text-light-s), var(--c-code-text-light-l));
+  --c-quote-text-light-h: 0deg;
+  --c-quote-text-light-s: 0%;
+  --c-quote-text-light-l: 14.9019607843%;
+  --c-quote-text-light: hsl(var(--c-quote-text-light-h), var(--c-quote-text-light-s), var(--c-quote-text-light-l));
+  --c-quote-border-light-h: 168.9795918367deg;
+  --c-quote-border-light-s: 90.1840490798%;
+  --c-quote-border-light-l: 31.9607843137%;
+  --c-quote-border-light: hsl(var(--c-quote-border-light-h), var(--c-quote-border-light-s), var(--c-quote-border-light-l));
   /*! purgecss end ignore */
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     /*! purgecss start ignore */
-    --c-surface-1: #fafafa;
-    --c-surface-2: #ffffff;
-    --c-surface-3: #f5f5f5;
-    --c-surface-4: #e6e6e6;
-    --c-text-1: #171717;
-    --c-text-2: #262626;
-    --c-text-3: #404040;
-    --c-text-4: #525252;
-    --c-code-bg: #171717;
-    --c-code-text: #f5f5f5;
-    --c-quote-text: #262626;
-    --c-quote-border: #089b80;
+    --c-surface-1-h: 0deg;
+    --c-surface-1-s: 0%;
+    --c-surface-1-l: 98.0392156863%;
+    --c-surface-1: hsl(var(--c-surface-1-h), var(--c-surface-1-s), var(--c-surface-1-l));
+    --c-surface-2-h: 0deg;
+    --c-surface-2-s: 0%;
+    --c-surface-2-l: 100%;
+    --c-surface-2: hsl(var(--c-surface-2-h), var(--c-surface-2-s), var(--c-surface-2-l));
+    --c-surface-3-h: 0deg;
+    --c-surface-3-s: 0%;
+    --c-surface-3-l: 96.0784313725%;
+    --c-surface-3: hsl(var(--c-surface-3-h), var(--c-surface-3-s), var(--c-surface-3-l));
+    --c-surface-4-h: 0deg;
+    --c-surface-4-s: 0%;
+    --c-surface-4-l: 90.1960784314%;
+    --c-surface-4: hsl(var(--c-surface-4-h), var(--c-surface-4-s), var(--c-surface-4-l));
+    --c-text-1-h: 0deg;
+    --c-text-1-s: 0%;
+    --c-text-1-l: 9.0196078431%;
+    --c-text-1: hsl(var(--c-text-1-h), var(--c-text-1-s), var(--c-text-1-l));
+    --c-text-2-h: 0deg;
+    --c-text-2-s: 0%;
+    --c-text-2-l: 14.9019607843%;
+    --c-text-2: hsl(var(--c-text-2-h), var(--c-text-2-s), var(--c-text-2-l));
+    --c-text-3-h: 0deg;
+    --c-text-3-s: 0%;
+    --c-text-3-l: 25.0980392157%;
+    --c-text-3: hsl(var(--c-text-3-h), var(--c-text-3-s), var(--c-text-3-l));
+    --c-text-4-h: 0deg;
+    --c-text-4-s: 0%;
+    --c-text-4-l: 32.1568627451%;
+    --c-text-4: hsl(var(--c-text-4-h), var(--c-text-4-s), var(--c-text-4-l));
+    --c-code-bg-h: 0deg;
+    --c-code-bg-s: 0%;
+    --c-code-bg-l: 9.0196078431%;
+    --c-code-bg: hsl(var(--c-code-bg-h), var(--c-code-bg-s), var(--c-code-bg-l));
+    --c-code-text-h: 0deg;
+    --c-code-text-s: 0%;
+    --c-code-text-l: 96.0784313725%;
+    --c-code-text: hsl(var(--c-code-text-h), var(--c-code-text-s), var(--c-code-text-l));
+    --c-quote-text-h: 0deg;
+    --c-quote-text-s: 0%;
+    --c-quote-text-l: 14.9019607843%;
+    --c-quote-text: hsl(var(--c-quote-text-h), var(--c-quote-text-s), var(--c-quote-text-l));
+    --c-quote-border-h: 168.9795918367deg;
+    --c-quote-border-s: 90.1840490798%;
+    --c-quote-border-l: 31.9607843137%;
+    --c-quote-border: hsl(var(--c-quote-border-h), var(--c-quote-border-s), var(--c-quote-border-l));
     /*! purgecss end ignore */
     color-scheme: light;
   }
@@ -245,54 +355,162 @@ html {
 [color-scheme=light],
 [data-theme=light] {
   /*! purgecss start ignore */
-  --c-surface-1: #fafafa;
-  --c-surface-2: #ffffff;
-  --c-surface-3: #f5f5f5;
-  --c-surface-4: #e6e6e6;
-  --c-text-1: #171717;
-  --c-text-2: #262626;
-  --c-text-3: #404040;
-  --c-text-4: #525252;
-  --c-code-bg: #171717;
-  --c-code-text: #f5f5f5;
-  --c-quote-text: #262626;
-  --c-quote-border: #089b80;
+  --c-surface-1-h: 0deg;
+  --c-surface-1-s: 0%;
+  --c-surface-1-l: 98.0392156863%;
+  --c-surface-1: hsl(var(--c-surface-1-h), var(--c-surface-1-s), var(--c-surface-1-l));
+  --c-surface-2-h: 0deg;
+  --c-surface-2-s: 0%;
+  --c-surface-2-l: 100%;
+  --c-surface-2: hsl(var(--c-surface-2-h), var(--c-surface-2-s), var(--c-surface-2-l));
+  --c-surface-3-h: 0deg;
+  --c-surface-3-s: 0%;
+  --c-surface-3-l: 96.0784313725%;
+  --c-surface-3: hsl(var(--c-surface-3-h), var(--c-surface-3-s), var(--c-surface-3-l));
+  --c-surface-4-h: 0deg;
+  --c-surface-4-s: 0%;
+  --c-surface-4-l: 90.1960784314%;
+  --c-surface-4: hsl(var(--c-surface-4-h), var(--c-surface-4-s), var(--c-surface-4-l));
+  --c-text-1-h: 0deg;
+  --c-text-1-s: 0%;
+  --c-text-1-l: 9.0196078431%;
+  --c-text-1: hsl(var(--c-text-1-h), var(--c-text-1-s), var(--c-text-1-l));
+  --c-text-2-h: 0deg;
+  --c-text-2-s: 0%;
+  --c-text-2-l: 14.9019607843%;
+  --c-text-2: hsl(var(--c-text-2-h), var(--c-text-2-s), var(--c-text-2-l));
+  --c-text-3-h: 0deg;
+  --c-text-3-s: 0%;
+  --c-text-3-l: 25.0980392157%;
+  --c-text-3: hsl(var(--c-text-3-h), var(--c-text-3-s), var(--c-text-3-l));
+  --c-text-4-h: 0deg;
+  --c-text-4-s: 0%;
+  --c-text-4-l: 32.1568627451%;
+  --c-text-4: hsl(var(--c-text-4-h), var(--c-text-4-s), var(--c-text-4-l));
+  --c-code-bg-h: 0deg;
+  --c-code-bg-s: 0%;
+  --c-code-bg-l: 9.0196078431%;
+  --c-code-bg: hsl(var(--c-code-bg-h), var(--c-code-bg-s), var(--c-code-bg-l));
+  --c-code-text-h: 0deg;
+  --c-code-text-s: 0%;
+  --c-code-text-l: 96.0784313725%;
+  --c-code-text: hsl(var(--c-code-text-h), var(--c-code-text-s), var(--c-code-text-l));
+  --c-quote-text-h: 0deg;
+  --c-quote-text-s: 0%;
+  --c-quote-text-l: 14.9019607843%;
+  --c-quote-text: hsl(var(--c-quote-text-h), var(--c-quote-text-s), var(--c-quote-text-l));
+  --c-quote-border-h: 168.9795918367deg;
+  --c-quote-border-s: 90.1840490798%;
+  --c-quote-border-l: 31.9607843137%;
+  --c-quote-border: hsl(var(--c-quote-border-h), var(--c-quote-border-s), var(--c-quote-border-l));
   /*! purgecss end ignore */
   color-scheme: light;
 }
 
 html {
   /*! purgecss start ignore */
-  --c-surface-dark-1: #171717;
-  --c-surface-dark-2: #262626;
-  --c-surface-dark-3: #404040;
-  --c-surface-dark-4: #525252;
-  --c-text-dark-1: #fafafa;
-  --c-text-dark-2: #f5f5f5;
-  --c-text-dark-3: #e6e6e6;
-  --c-text-dark-4: #d4d4d4;
-  --c-code-bg-dark: #000000;
-  --c-code-text-dark: #f5f5f5;
-  --c-quote-text-dark: #f5f5f5;
-  --c-quote-border-dark: #dc2828;
+  --c-surface-dark-1-h: 0deg;
+  --c-surface-dark-1-s: 0%;
+  --c-surface-dark-1-l: 9.0196078431%;
+  --c-surface-dark-1: hsl(var(--c-surface-dark-1-h), var(--c-surface-dark-1-s), var(--c-surface-dark-1-l));
+  --c-surface-dark-2-h: 0deg;
+  --c-surface-dark-2-s: 0%;
+  --c-surface-dark-2-l: 14.9019607843%;
+  --c-surface-dark-2: hsl(var(--c-surface-dark-2-h), var(--c-surface-dark-2-s), var(--c-surface-dark-2-l));
+  --c-surface-dark-3-h: 0deg;
+  --c-surface-dark-3-s: 0%;
+  --c-surface-dark-3-l: 25.0980392157%;
+  --c-surface-dark-3: hsl(var(--c-surface-dark-3-h), var(--c-surface-dark-3-s), var(--c-surface-dark-3-l));
+  --c-surface-dark-4-h: 0deg;
+  --c-surface-dark-4-s: 0%;
+  --c-surface-dark-4-l: 32.1568627451%;
+  --c-surface-dark-4: hsl(var(--c-surface-dark-4-h), var(--c-surface-dark-4-s), var(--c-surface-dark-4-l));
+  --c-text-dark-1-h: 0deg;
+  --c-text-dark-1-s: 0%;
+  --c-text-dark-1-l: 98.0392156863%;
+  --c-text-dark-1: hsl(var(--c-text-dark-1-h), var(--c-text-dark-1-s), var(--c-text-dark-1-l));
+  --c-text-dark-2-h: 0deg;
+  --c-text-dark-2-s: 0%;
+  --c-text-dark-2-l: 96.0784313725%;
+  --c-text-dark-2: hsl(var(--c-text-dark-2-h), var(--c-text-dark-2-s), var(--c-text-dark-2-l));
+  --c-text-dark-3-h: 0deg;
+  --c-text-dark-3-s: 0%;
+  --c-text-dark-3-l: 90.1960784314%;
+  --c-text-dark-3: hsl(var(--c-text-dark-3-h), var(--c-text-dark-3-s), var(--c-text-dark-3-l));
+  --c-text-dark-4-h: 0deg;
+  --c-text-dark-4-s: 0%;
+  --c-text-dark-4-l: 83.137254902%;
+  --c-text-dark-4: hsl(var(--c-text-dark-4-h), var(--c-text-dark-4-s), var(--c-text-dark-4-l));
+  --c-code-bg-dark-h: 0deg;
+  --c-code-bg-dark-s: 0%;
+  --c-code-bg-dark-l: 0%;
+  --c-code-bg-dark: hsl(var(--c-code-bg-dark-h), var(--c-code-bg-dark-s), var(--c-code-bg-dark-l));
+  --c-code-text-dark-h: 0deg;
+  --c-code-text-dark-s: 0%;
+  --c-code-text-dark-l: 96.0784313725%;
+  --c-code-text-dark: hsl(var(--c-code-text-dark-h), var(--c-code-text-dark-s), var(--c-code-text-dark-l));
+  --c-quote-text-dark-h: 0deg;
+  --c-quote-text-dark-s: 0%;
+  --c-quote-text-dark-l: 96.0784313725%;
+  --c-quote-text-dark: hsl(var(--c-quote-text-dark-h), var(--c-quote-text-dark-s), var(--c-quote-text-dark-l));
+  --c-quote-border-dark-h: 0deg;
+  --c-quote-border-dark-s: 72%;
+  --c-quote-border-dark-l: 50.9803921569%;
+  --c-quote-border-dark: hsl(var(--c-quote-border-dark-h), var(--c-quote-border-dark-s), var(--c-quote-border-dark-l));
   /*! purgecss end ignore */
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     /*! purgecss start ignore */
-    --c-surface-1: #171717;
-    --c-surface-2: #262626;
-    --c-surface-3: #404040;
-    --c-surface-4: #525252;
-    --c-text-1: #fafafa;
-    --c-text-2: #f5f5f5;
-    --c-text-3: #e6e6e6;
-    --c-text-4: #d4d4d4;
-    --c-code-bg: #000000;
-    --c-code-text: #f5f5f5;
-    --c-quote-text: #f5f5f5;
-    --c-quote-border: #dc2828;
+    --c-surface-1-h: 0deg;
+    --c-surface-1-s: 0%;
+    --c-surface-1-l: 9.0196078431%;
+    --c-surface-1: hsl(var(--c-surface-1-h), var(--c-surface-1-s), var(--c-surface-1-l));
+    --c-surface-2-h: 0deg;
+    --c-surface-2-s: 0%;
+    --c-surface-2-l: 14.9019607843%;
+    --c-surface-2: hsl(var(--c-surface-2-h), var(--c-surface-2-s), var(--c-surface-2-l));
+    --c-surface-3-h: 0deg;
+    --c-surface-3-s: 0%;
+    --c-surface-3-l: 25.0980392157%;
+    --c-surface-3: hsl(var(--c-surface-3-h), var(--c-surface-3-s), var(--c-surface-3-l));
+    --c-surface-4-h: 0deg;
+    --c-surface-4-s: 0%;
+    --c-surface-4-l: 32.1568627451%;
+    --c-surface-4: hsl(var(--c-surface-4-h), var(--c-surface-4-s), var(--c-surface-4-l));
+    --c-text-1-h: 0deg;
+    --c-text-1-s: 0%;
+    --c-text-1-l: 98.0392156863%;
+    --c-text-1: hsl(var(--c-text-1-h), var(--c-text-1-s), var(--c-text-1-l));
+    --c-text-2-h: 0deg;
+    --c-text-2-s: 0%;
+    --c-text-2-l: 96.0784313725%;
+    --c-text-2: hsl(var(--c-text-2-h), var(--c-text-2-s), var(--c-text-2-l));
+    --c-text-3-h: 0deg;
+    --c-text-3-s: 0%;
+    --c-text-3-l: 90.1960784314%;
+    --c-text-3: hsl(var(--c-text-3-h), var(--c-text-3-s), var(--c-text-3-l));
+    --c-text-4-h: 0deg;
+    --c-text-4-s: 0%;
+    --c-text-4-l: 83.137254902%;
+    --c-text-4: hsl(var(--c-text-4-h), var(--c-text-4-s), var(--c-text-4-l));
+    --c-code-bg-h: 0deg;
+    --c-code-bg-s: 0%;
+    --c-code-bg-l: 0%;
+    --c-code-bg: hsl(var(--c-code-bg-h), var(--c-code-bg-s), var(--c-code-bg-l));
+    --c-code-text-h: 0deg;
+    --c-code-text-s: 0%;
+    --c-code-text-l: 96.0784313725%;
+    --c-code-text: hsl(var(--c-code-text-h), var(--c-code-text-s), var(--c-code-text-l));
+    --c-quote-text-h: 0deg;
+    --c-quote-text-s: 0%;
+    --c-quote-text-l: 96.0784313725%;
+    --c-quote-text: hsl(var(--c-quote-text-h), var(--c-quote-text-s), var(--c-quote-text-l));
+    --c-quote-border-h: 0deg;
+    --c-quote-border-s: 72%;
+    --c-quote-border-l: 50.9803921569%;
+    --c-quote-border: hsl(var(--c-quote-border-h), var(--c-quote-border-s), var(--c-quote-border-l));
     /*! purgecss end ignore */
     color-scheme: dark;
   }
@@ -300,18 +518,54 @@ html {
 [color-scheme=dark],
 [data-theme=dark] {
   /*! purgecss start ignore */
-  --c-surface-1: #171717;
-  --c-surface-2: #262626;
-  --c-surface-3: #404040;
-  --c-surface-4: #525252;
-  --c-text-1: #fafafa;
-  --c-text-2: #f5f5f5;
-  --c-text-3: #e6e6e6;
-  --c-text-4: #d4d4d4;
-  --c-code-bg: #000000;
-  --c-code-text: #f5f5f5;
-  --c-quote-text: #f5f5f5;
-  --c-quote-border: #dc2828;
+  --c-surface-1-h: 0deg;
+  --c-surface-1-s: 0%;
+  --c-surface-1-l: 9.0196078431%;
+  --c-surface-1: hsl(var(--c-surface-1-h), var(--c-surface-1-s), var(--c-surface-1-l));
+  --c-surface-2-h: 0deg;
+  --c-surface-2-s: 0%;
+  --c-surface-2-l: 14.9019607843%;
+  --c-surface-2: hsl(var(--c-surface-2-h), var(--c-surface-2-s), var(--c-surface-2-l));
+  --c-surface-3-h: 0deg;
+  --c-surface-3-s: 0%;
+  --c-surface-3-l: 25.0980392157%;
+  --c-surface-3: hsl(var(--c-surface-3-h), var(--c-surface-3-s), var(--c-surface-3-l));
+  --c-surface-4-h: 0deg;
+  --c-surface-4-s: 0%;
+  --c-surface-4-l: 32.1568627451%;
+  --c-surface-4: hsl(var(--c-surface-4-h), var(--c-surface-4-s), var(--c-surface-4-l));
+  --c-text-1-h: 0deg;
+  --c-text-1-s: 0%;
+  --c-text-1-l: 98.0392156863%;
+  --c-text-1: hsl(var(--c-text-1-h), var(--c-text-1-s), var(--c-text-1-l));
+  --c-text-2-h: 0deg;
+  --c-text-2-s: 0%;
+  --c-text-2-l: 96.0784313725%;
+  --c-text-2: hsl(var(--c-text-2-h), var(--c-text-2-s), var(--c-text-2-l));
+  --c-text-3-h: 0deg;
+  --c-text-3-s: 0%;
+  --c-text-3-l: 90.1960784314%;
+  --c-text-3: hsl(var(--c-text-3-h), var(--c-text-3-s), var(--c-text-3-l));
+  --c-text-4-h: 0deg;
+  --c-text-4-s: 0%;
+  --c-text-4-l: 83.137254902%;
+  --c-text-4: hsl(var(--c-text-4-h), var(--c-text-4-s), var(--c-text-4-l));
+  --c-code-bg-h: 0deg;
+  --c-code-bg-s: 0%;
+  --c-code-bg-l: 0%;
+  --c-code-bg: hsl(var(--c-code-bg-h), var(--c-code-bg-s), var(--c-code-bg-l));
+  --c-code-text-h: 0deg;
+  --c-code-text-s: 0%;
+  --c-code-text-l: 96.0784313725%;
+  --c-code-text: hsl(var(--c-code-text-h), var(--c-code-text-s), var(--c-code-text-l));
+  --c-quote-text-h: 0deg;
+  --c-quote-text-s: 0%;
+  --c-quote-text-l: 96.0784313725%;
+  --c-quote-text: hsl(var(--c-quote-text-h), var(--c-quote-text-s), var(--c-quote-text-l));
+  --c-quote-border-h: 0deg;
+  --c-quote-border-s: 72%;
+  --c-quote-border-l: 50.9803921569%;
+  --c-quote-border: hsl(var(--c-quote-border-h), var(--c-quote-border-s), var(--c-quote-border-l));
   /*! purgecss end ignore */
   color-scheme: dark;
 }
