--- a/scss/core/generators/_vars.scss
+++ b/scss/core/generators/_vars.scss
@@ -35,8 +35,7 @@
 @mixin generate-color-scheme-css-vars($colors-map: (), $color-scheme: null, $suffix: null) {
   /*! purgecss start ignore */
   @each $color, $value in $colors-map {
-    @include color-custom-prop(c-#{$color}, $color-scheme, $value, $suffix);
-    // @include hsl-color-custom-prop(c-#{$color}, $color-scheme, $value, $suffix);
+    @include hsl-color-custom-prop(c-#{$color}, $color-scheme, $value, $suffix);
   }
   /*! purgecss end ignore */
 }
