--- a/scss/core/helpers/_color.scss
+++ b/scss/core/helpers/_color.scss
@@ -6,6 +6,8 @@
 @use 'sass:math';
 @use 'sass:meta';
 
+@use 'string' as str;
+
 // --------------------------------
 //   Functions
 // --------------------------------
@@ -31,6 +33,22 @@
     @return rgba(color.red($color), color.green($color), color.blue($color), $alpha);
   } @else {
     @error "#{$color} is not a valid color object!";
+  }
+}
+
+@function change-alpha($color, $alpha: 1) {
+  @if type-of($color) == 'color' {
+    @return color.change($color, $alpha: $alpha);
+  } @else {
+    // TODO: ...
+    $color-name: str.replace($color, 'var(');
+    $color-name: str.replace($color-name, ')');
+
+    $color-h: var(#{$color-name + '-h'});
+    $color-s: var(#{$color-name + '-s'});
+    $color-l: var(#{$color-name + '-l'});
+
+    @return hsla($color-h, $color-s, $color-l, $alpha);
   }
 }
 
