--- a/scss/core/helpers/_string.scss
+++ b/scss/core/helpers/_string.scss
@@ -33,6 +33,25 @@
   }
 }
 
+/* Split a string by delimiter
+  Example: split('1--2--3', '--') -> "1" "2" "3" */
+@function split($string, $delimiter: ',', $trim: true) {
+  @if not $delimiter or string.length($string) == 0 or $delimiter == '' {
+    @return $string;
+  }
+
+  $delimiter-index: string.index($string, $delimiter);
+
+  @if not $delimiter-index {
+    @return if($trim, list.append((), replace($string, ' ')), list.append((), $string));
+  }
+
+  @return list.join(
+    string.slice($string, 1, $delimiter-index - 1),
+    split(string.slice($string, $delimiter-index + string.length($delimiter)), $delimiter)
+  );
+}
+
 /// Escape chars in a given string.
 ///
 /// @param {string} $string
